welcome.lessons.welcome.array.search.OccurrenceOfValue.scala.error
occurrences:3: error: not found: value lenght
  for (i<-1 to lenght.nums-1) {
               ^